BE/DrumComesTrue/src/main/java/com/example/drumcomestrue/common/error/JwtException.java
package com.example.drumcomestrue.common.error;

import com.example.drumcomestrue.common.exception.ApplicationError;
import com.example.drumcomestrue.common.exception.ApplicationException;

public class JwtException extends ApplicationException {
	public JwtException(ApplicationError error) {
		super(error);
	}
}
